add news sorting and filters improvements
