# src/openapi/news.yaml
@@ -83,6 +83,20 @@ paths:
           schema:
             type: string
             format: date
+        - in: query
+          name: searchText
+          required: false
+          schema:
+            type: string
+
+        - in: query
+          name: order
+          required: false
+          content:
+            application/json:
+              schema:
+                $ref: "difinitions.yaml#/components/schemas/NewsOrder"
+
       responses:
         200:
           description: A list of news.
